Ajout d'un second titre et un paragraphe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Bonjour tout le monde ! </h1>
+    <h2>Mon second titre</h2>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus consequatur quibusdam similique corrupti, nobis natus omnis nisi ea pariatur quas, praesentium eos dicta, est sed tempora soluta. Esse, nemo a!
+    </p>
 </body>
 </html>
