--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test de GitHub</title>
+
+    <style>
+        body{
+            background: red;
+        }
+    </style>
 </head>
 <body>
     <h1>Bonjour tout le monde ! </h1>
